wxc/include/ewxw/wxc_glue.h



/* wxMenuBar */
TClassDefExtend(wxMenuBar,wxEvtHandler)
int        wxMenuBar_Append( TSelf(wxMenuBar) _obj, TClass(wxMenu) menu, TString title );

void       wxMenuBar_Check( TSelf(wxMenuBar) _obj, int id, TBool check );

TClass(wxMenuBar) wxMenuBar_Create( int _style );

void       wxMenuBar_DeletePointer( TSelf(wxMenuBar) _obj );

int        wxMenuBar_Enable( TSelf(wxMenuBar) _obj, TBool enable );

void       wxMenuBar_EnableItem( TSelf(wxMenuBar) _obj, int id, TBool enable );

void       wxMenuBar_EnableTop( TSelf(wxMenuBar) _obj, int pos, TBool enable );

void*      wxMenuBar_FindItem( TSelf(wxMenuBar) _obj, int id, TClass(wxMenu) menu );

int        wxMenuBar_FindMenu( TSelf(wxMenuBar) _obj, TString title );

int        wxMenuBar_FindMenuItem( TSelf(wxMenuBar) _obj, TString menuString, TString itemString );

TStringLen wxMenuBar_GetHelpString( TSelf(wxMenuBar) _obj, int id, TStringOutVoid _buf );

TStringLen wxMenuBar_GetLabel( TSelf(wxMenuBar) _obj, int id, TStringOutVoid _buf );

TStringLen wxMenuBar_GetLabelTop( TSelf(wxMenuBar) _obj, int pos, TStringOutVoid _buf );

TClass(wxMenu) wxMenuBar_GetMenu( TSelf(wxMenuBar) _obj, int pos );

int        wxMenuBar_GetMenuCount( TSelf(wxMenuBar) _obj );

int        wxMenuBar_Insert( TSelf(wxMenuBar) _obj, int pos, TClass(wxMenu) menu, TString title );

TBool      wxMenuBar_IsChecked( TSelf(wxMenuBar) _obj, int id );

TBool      wxMenuBar_IsEnabled( TSelf(wxMenuBar) _obj, int id );

void*      wxMenuBar_Remove( TSelf(wxMenuBar) _obj, int pos );

void*      wxMenuBar_Replace( TSelf(wxMenuBar) _obj, int pos, TClass(wxMenu) menu, TString title );

void       wxMenuBar_SetHelpString( TSelf(wxMenuBar) _obj, int id, TString helpString );

void       wxMenuBar_SetLabel( TSelf(wxMenuBar) _obj, TString s );

void       wxMenuBar_SetLabelTop( TSelf(wxMenuBar) _obj, int pos, TString label );